# MAC0422---Sistemas-Operacionais

./: CMakeLists.txt  ep1sh  ep1sh.c
ep1/: Makefile  date.c  date.h  ep1  ep1.c  ep1sh.c  exemplo.txt  exemplo1.txt  exemplo2.txt  exemplo3.txt  exemplo4.txt  exemplo5.txt  exemplo6.txt  exemplo7.txt  file_utils.c  file_utils.h  gerador  gerador.c  ls.c  ls.h  process.c  process.h  saida.txt
ep2/: ep2.c
